[gd_scene load_steps=2 format=3 uid="uid://c8qvt5qjkuv7qf"]

[ext_resource type="Script" path="res://scenes/map/map_scene.gd" id="1_yvmqe"]

[node name="MapScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvmqe")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "地图"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConnectionsContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MapContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerInfo" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -70.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="HealthLabel" type="Label" parent="PlayerInfo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "生命值: 100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldLabel" type="Label" parent="PlayerInfo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "金币: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="PlayerInfo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "等级: 1"
horizontal_alignment = 1
vertical_alignment = 1
